[mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
python_version=3.6
platform=linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True

# show error messages from unrelated files
follow_imports=normal

# suppress errors about unsatisfied imports
ignore_missing_imports=True

# be strict
disallow_untyped_calls=True
warn_return_any=True
strict_optional=True
warn_no_return=True
warn_redundant_casts=True
warn_unused_ignores=True

# The following are off by default.  Flip them on if you feel
# adventurous.
disallow_untyped_defs=True
check_untyped_defs=True

[flake8]
ignore = E203, E266, E501, W503, F401
max-line-length = 80
max-complexity = 18
exclude= .tox,.venv,venv,notebooks,vendor
select = B,C,E,F,W,T4

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip_glob=.venv
force_sort_within_sections= true
import_heading_future= Compatibility imports
import_heading_stdlib= Standard Library Imports
import_heading_thirdparty= External Imports (via PyPI or custom index)
import_heading_firstparty= Intenal Imports from project
skip =  vendor/sdat2img.py

[metadata]
exclude = *.egg*,.env,.git,.tox,_*,build*,dist*,venv*,.venv,.mypy_cache,virtualenv
